# Stratum

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  setup.sh  start.sh  stop.sh
benches/: README.md  loadtest.js  run-benchmarks.sh
config/: anomaly-rules.toml
crates/logai-anomaly/: Cargo.toml
crates/logai-anomaly/src/: alerting.rs  config.rs  detection.rs  lib.rs  runner.rs  slack.rs
crates/logai-anomaly/tests/: detection_test.rs
crates/logai-api/: Cargo.toml
crates/logai-api/src/: main.rs  middleware.rs  state.rs
crates/logai-api/src/handlers/: alerts.rs  chat.rs  ingest.rs  mod.rs  search.rs  stats.rs
crates/logai-api/src/models/: request.rs  response.rs
crates/logai-cli/: Cargo.toml
crates/logai-cli/src/: main.rs  simulate.rs  stress.rs
crates/logai-core/: Cargo.toml
crates/logai-core/benches/: parsing.rs
crates/logai-core/src/: lib.rs
crates/logai-core/src/parser/: apache.rs  mod.rs  nginx.rs  proxmox.rs  syslog.rs
crates/logai-core/tests/: parser_test.rs
crates/logai-rag/: Cargo.toml
crates/logai-rag/benches/: rag.rs
crates/logai-rag/src/: causal.rs  engine.rs  groq_client.rs  lib.rs  llm_client.rs  ollama_client.rs  query_analyzer.rs  reranker.rs
crates/logai-worker/: Cargo.toml
crates/logai-worker/src/: main.rs
dashboard/: .dockerignore  Dockerfile  LICENSE  README.md  next.config.mjs  package.json  pnpm-lock.yaml
dashboard/src/: types.ts
dashboard/src/app/: global-error.tsx  globals.css  layout.tsx
dashboard/src/app/(dashboard-layout)/: page.tsx
dashboard/src/app/(dashboard-layout)/anomalies/: page.tsx
dashboard/src/app/(dashboard-layout)/chat/: page.tsx
dashboard/src/app/(dashboard-layout)/logs/: page.tsx
dashboard/src/components/layout/: index.tsx  sidebar.tsx
dashboard/src/components/layout/vertical-layout/: index.tsx  vertical-layout-header.tsx
dashboard/src/components/ui/: dialog.tsx  keyboard.tsx
dashboard/src/data/: navigations.ts
dashboard/src/lib/: api.ts
