[workspace]
resolver = "2"
members = [
    "crates/logai-core",
    "crates/logai-api",
    "crates/logai-cli",
    "crates/logai-worker",
    "crates/logai-anomaly",
    "crates/logai-rag",
]

[workspace.dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

# Pin time to version compatible with Rust 1.85
time = "=0.3.36"