[package]
name = "logai-api"
version = "0.1.0"
edition = "2024"

[dependencies]
logai-core = { path = "../logai-core" } # core type which we made

#HTTP server
axum = "0.8" # web framework liek express
tokio = {version = "1", features = ["full"] } #async runtime
tower-http = { version = "0.6", features = ["cors"] } # CORS middleware

#serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#logging
tracing = "0.1"
tracing-subscriber = "0.3"

#NATS- client
async-nats = "0.46.0"

#embedding generation (local, no API key needed)
fastembed = "5"

#Qdrant vector database client
qdrant-client = "1.13"

#ClickHouse client
clickhouse = { version = "0.14.2", features = ["lz4"] }

#RAG engine
logai-rag = { path = "../logai-rag" }

#Environment variables
dotenvy = "0.15"

#Time handling
chrono = "0.4"