[package]
name = "logai-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logai"
path = "src/main.rs"

[[bin]]
name = "logai-stress"
path = "src/stress.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.10.0"
indicatif = "0.18.3"
tokio-stream = "0.1"
futures = "0.3"
colored = "3.1.1"
comfy-table = "7"
urlencoding = "2"
