[package]
name = "logai-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core types
logai-core = { path = "../logai-core" }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP client for Groq API
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time parsing
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# Error handling
thiserror = "2.0.18"

# Logging
tracing = "0.1"